# pendulum

./: CMakeLists.txt  README.md  main.cpp
include/: Controller.h  LowPassFilter.h  NatNetClient.h  NatNetTypes.h  SerialCommunicator.h  conio.h
include/serial/: serial.h
include/serial/impl/: unix.h
simulation/: pendulum_energy_law.jl
src/: Controller.cpp  LowPassFilter.cpp  SerialCommunicator.cpp  serial.cc
src/impl/: unix.cc
src/impl/list_ports/: list_ports_linux.cc
